router server with flask

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-	"title": "URL Shortener",
+	"title": "KURLY",
 	"version": "1.0",
+	"flask_port": 5000,
 	"min_short_url_length": 3,
 	"max_short_url_length": 20
 }
