--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
 	"version": "1.0",
 	"min_short_url_length": 3,
 	"max_short_url_length": 20,
+	"rename_password_protected_urls": true,
 	"short_url_length": 6,
 	"flask_port": 6969,
 	"flask_debug": true,
